Apply suggestions from code review
Co-authored-by: Pascal Stücker <131346899+pstuecker@users.noreply.github.com>